--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tx_browser",
   "version": "1.0.0",
-  "description": "", 
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,8 +25,11 @@
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/mocha": "^9.0.0",
+    "mocha": "^9.1.3",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "uglify-js": "^3.14.3"
   }
 }
